Improving website metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,18 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ea1d2c" />
+    <meta name="type" content="website" />
+    <meta name="url" content="https://adielson.herokuapp.com/" />
     <meta
       name="description"
       content="Restaurante e pastelaria do adielson, agora online pronto para atender o seu pedido!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/adielson.png" />
+    <meta
+      name="image"
+      content="https://adielson.herokuapp.com/assets/adielson.png"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/adielson.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
