Using open graph to generate a properly preview

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
       name="image"
       content="https://adielson.herokuapp.com/assets/adielson.png"
     />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://adielson.herokuapp.com/">
+    <meta property="og:title" content="Restaurante e Pastelaria do Adielson | Delivery">
+    <meta property="og:description" content="Restaurante e pastelaria do adielson, agora online pronto para atender o seu pedido!">
+    <meta property="og:image" content="https://adielson.herokuapp.com/assets/adielson.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/adielson.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
