Adding more meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,6 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ea1d2c" />
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://adielson.herokuapp.com/">
-    <meta property="og:title" content="Restaurante e Pastelaria do Adielson | Delivery">
-    <meta property="og:description" content="Restaurante e pastelaria do adielson, agora online pronto para atender o seu pedido!">
-    <meta property="og:image" content="https://adielson.herokuapp.com/assets/adielson.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/adielson.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
@@ -20,6 +13,46 @@
       crossorigin="anonymous"
     />
     <title>Adielson R&P</title>
+    <meta
+      name="description"
+      content="Restaurante e pastelaria do adielson, agora online pronto para atender o seu pedido!"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ea1d2c" />
+
+    <meta name="twitter:card" content="Adielson" />
+    <meta name="twitter:site" content="https://adielson.herokuapp.com/" />
+    <meta
+      name="twitter:title"
+      content="Restaurante e Pastelaria do Adielson | Delivery"
+    />
+    <meta
+      name="twitter:description"
+      content="Restaurante e pastelaria do adielson, agora online pronto para atender o seu pedido!"
+    />
+    <meta
+      name="twitter:image:src"
+      content="https://adielson.herokuapp.com/assets/adielson.png"
+    />
+
+    <meta
+      property="og:title"
+      content="Restaurante e Pastelaria do Adielson | Delivery"
+    />
+    <meta
+      property="og:description"
+      content="Restaurante e pastelaria do adielson, agora online pronto para atender o seu pedido!"
+    />
+    <meta
+      property="og:image"
+      content="https://adielson.herokuapp.com/assets/adielson.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="460" />
+    <meta property="og:image:height" content="400" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Adielson" />
+    <meta property="og:url" content="https://adielson.herokuapp.com/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
